gtk+2.0 (2.12.5-3) UNRELEASED; urgency=low

  * Fix GNOME casing in gtk-faq and gtk doc base descriptions.

 -- Loic Minier <lool@dooz.org>  Mon, 21 Jan 2008 18:42:28 +0100

gtk+2.0 (2.12.5-2) unstable; urgency=medium

  * Add ${shlibs:Depends} to libgtk2.0-dev.
  * Rework /usr/share/doc symlinks completely; closes: #461440.
    - Use a real directory for all packages using a symlink previously:
      libgtk2.0-bin, libgtk-directfb-2.0-dev, libgtk2.0-dev, libgtk2.0-0-dbg,
      libgtk-directfb-2.0-0, libgtk2.0-0; add a preinst snippet removing the
      path on upgrade if it's a symlink and points to the proper directory;
      add a prerm snippet removing the path on upgrade (for downgrades) if
      it's a directory (and not a symlink).
    - Create symlinks for changelog.gz, NEWS.gz, NEWS.pre-1-0.gz, and
      README.gz in the /usr/share/doc dirs of these packages as well as for
      gtk2-engines-pixbuf; add a libgtk2.0-common unversionned dependency for
      all these packages.
    - Split dh_installdocs and dh_installchangelogs calls on multiple packages
      and use one call per package as the intent was to install in all the
      specified packages; also call dh_installdocs and dh_installchangelogs
      without any extra file for all packages to install copyright and Debian
      changelog.
    - Factor the list of dh_installdocs files in DH_INSTALLDOCS_FILES in
      rules.

 -- Loic Minier <lool@dooz.org>  Fri, 18 Jan 2008 10:38:43 +0100

gtk+2.0 (2.12.5-1) unstable; urgency=low

  [ Loic Minier ]
  * Drop the version in the libgtk2.0-0 -> libgtk2.0-common dependency; the
    translations and gtkrc files aren't critical to libgtk's working and have
    been compatible with other libgtk versions since years.
  * New patch, 094_fix-jpeg-loader-big-buffers, fixes spinguard logic for big
    buffers in the JPEG pixbuf loader; GNOME #494667; from SVN r19135.
  * New upstream stable releases; no API change; bug fixes and translation
    updates.