@@ -1,6 +1,8 @@
 gtk+2.0 (2.12.5-3) UNRELEASED; urgency=low
 
   * Fix GNOME casing in gtk-faq and gtk doc base descriptions.
+  * Drop cruft trying to convert /usr/share/doc/libgtk2.0-0 directory into a
+    symlink in libgtk2.0-0.postinst; thanks Sven Joachim; closes: #462057.
 
  -- Loic Minier <lool@dooz.org>  Mon, 21 Jan 2008 18:42:28 +0100
 
